styles: Added temporal solution to fix loading overflow in grid components #TASK-6133

--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -361,6 +361,7 @@ select.no-data + .select2-container--bootstrap-5.select2-container--open.select2
 }
 
 /****** animation ********/
+
 .anim-float {
     animation: float .5s infinite;
 }
@@ -422,7 +423,6 @@ select.no-data + .select2-container--bootstrap-5.select2-container--open.select2
     }
 }
 
-/* Animations */
 @keyframes pulse {
     0% {
         transform: scale(1);
@@ -438,6 +438,7 @@ select.no-data + .select2-container--bootstrap-5.select2-container--open.select2
 }
 
 /* Fonts */
+
 @font-face {
     font-family: 'Ubuntu';
     font-style: normal;
@@ -496,4 +497,17 @@ select.no-data + .select2-container--bootstrap-5.select2-container--open.select2
     .qtip:has(.population-freq-tooltip) {
         max-width: 500px !important;
     }
+}
+
+/* Bootstrap table */
+
+/* Terrible hack to make sure that the bootstrap table has a minimum height of 200px */
+/* This is required to prevent the DNA loader exceed the table container */
+.bootstrap-table {
+    min-height: 200px;
+}
+
+/* Sets a minimum height to the loading container, to make sure that the loading DNA fits on this space */
+.bootstrap-table .fixed-table-loading {
+    min-height: 110px;
 }
